lang/interpret_test/TestAstFunc2/ycombinator.txtar
-- main.mcl --
import "fmt"

$y = func($fn) {
	$fn($fn)
}(
	func($fn) {
		$fn($fn)
	}
)

test [fmt.printf("y: %v", $y),] {}
-- OUTPUT --
# err: errUnify: directly in the same set: /main.mcl @ 6:2-8:3
directly in the same set: /main.mcl @ 6:2-8:3

	func($fn) {
	^ from here ...
	}
	^ ... to here
